--- a/main-style.css
+++ b/main-style.css
@@ -1,5 +1,65 @@
-img.main.fins{
-    width: 100%;
-    height: auto;
+    /*uses this style sheet when the browser window is the size of a mobile device*/
+
+    /*displays the websites header centered  */
+    h1 {
+      margin-top: 0;
+      text-align: center;
+     
+  }
+  /*Set font for the whole website*/
+  *{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  /*changes the page Header on the top of every page to look normal after adding link which originally turned the text purple and underlined*/
+  .pageHeader{
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  }
+
+  /*Keeps the website logo white even when hovering over it*/
+  .topnav .pageHeader:hover{
+      background-color: white;
+  }
+  
+  /* Style the navigation menu */
+  .topnav {
+      overflow: hidden;
+      background-color:white;
+      position: relative;
+  }
+  
+    /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+      display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+      color: black;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+      display: block;
+    }
     
-}
+    /* Style the hamburger menu */
+  .topnav a.icon {
+      background: white;
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+      background-color: lightgray;
+      color: black;
+    }
+    /* Style the active link (or home/logo) */
+  .active {
+      background-color: gray;
+      color: white;
+    }
+
+  
